<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nguessan.script.signup"
    android:nestedScrollingEnabled="true"
    android:background="#d0cece">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:labelFor="@+id/editTextUsername"
        android:ems="10"
        android:id="@+id/editTextUsername"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text="@string/Email"
        android:labelFor="@+id/editTextEmail"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:layout_below="@+id/editTextUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:labelFor="@+id/editTextPassword"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/cp"
        android:id="@+id/editTextcp"
        android:labelFor="@+id/editTextcp"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:id="@+id/button4"
        android:layout_below="@+id/editTextcp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:layout_marginTop="44dp"
        android:onClick="onSignupClick" />
</RelativeLayout>
